# open-interpreter-devcontainer

./: .env_sample  .gitignore  README.md
.devcontainer/: devcontainer.json
open_interpreter_azure/: README.md  open_interpreter.py  pyproject.toml
open_interpreter_gpt3/: README.md  open_interpreter.py  pyproject.toml
open_interpreter_gpt4/: README.md  open_interpreter.py  pyproject.toml
